--- a/03 texto/estilo.css
+++ b/03 texto/estilo.css
@@ -65,7 +65,7 @@ h1{
         font-size: 72px;
         background: linear-gradient(to botoom right, blue, green);
         -webkit-background-clip: text;
-        color: transparent;
+        color: black;
         transition: 1s all ease;
         transform: scale(1.1);
         transform:rotate(360deg);
