--- a/poseemoji/style.css
+++ b/poseemoji/style.css
@@ -7,7 +7,7 @@
     width: 60%;
     height: 50%;
     border: 2px solid whitesmoke;
-    background: white;
+    background: yellowgreen;
     margin: 10px;
   }
   .cara{
