--- a/05 boxmodel/estilo.css
+++ b/05 boxmodel/estilo.css
@@ -111,15 +111,9 @@ background: linear-gradient(45deg, rgba(2,0,36,1) 0%, rgba(0,180,45,1) 52%, rgba
     box-shadow: -20px 40px 10px turquoise;
     border-radius: 60% 20%;
 }
-a:hover{
-    background-color: violet;
-    color: yellowgreen;
-    transform: scale(1.2);
-    transition: 2s all ease;
-} 
-a:active{
-    transform: scale(1.0);
-    background-color: blue;
-    color: azure;
+#caja13:hover{
+    transform: scale(1.3);
+    transform: rotate(1080deg);
     transition: 1s all ease;
 }
+
