--- a/10 grid/estilo.css
+++ b/10 grid/estilo.css
@@ -59,3 +59,46 @@ body{
     grid-row: 3;
     background: palevioletred;
 }
+.main3{
+    width: 400px;
+    height: 400px;
+    display: block;
+    background: white;
+    margin: 20px auto;
+    border: 3px solid black;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 100px 20px 200px 40px;
+    grid-gap: 10px;
+}
+.item6{
+    grid-column: 1/3;
+    grid-row: 1;
+    background: gray;
+}
+.item7{
+    grid-column: 3/1;
+    grid-row: 2;
+    background: green;
+}
+.item8{
+    grid-column: 2;
+    grid-row: 3;
+    background: red;
+}
+.item9{
+    grid-column: 1;
+    grid-row: 3;
+    background: blue;
+}
+.item10{
+    grid-column: 2/4;
+    grid-row: 3;
+    background: red;
+}
+.item11{
+    grid-column: 1/3;
+    grid-row: 4;
+    background: green;
+}
+
