--- a/10 maqueta/style.css
+++ b/10 maqueta/style.css
@@ -1,57 +1,71 @@
-.main{
-    width: 600px;
-    height: 600px;
-    display: block;
+*{
+
+    margin: 0px;
+
+    padding: 0px;
+    box-sizing: border-box;
+}
+
+body{
+    width: 100%;
+    height: 100vh;
     font-size: 30px;
-    color: white;
-    font-family: a;
-    border:3px solid black;
+    color: black;
+    text-align: center;
     display: grid;
-    grid-template-columns:repeat(3, 1fr) ;
-    grid-template-rows: repeat(3, 1fr);
-    grid-gap: 10px;
-    }
-    .header{
-        grid-column: 1/5;
-        grid-row: 1;
-        background: blue;
-        border: 2px solid black;
-    }
-    .barra{
-        grid-column: 1;
-        grid-row: 2/4;
-        background: rgb(255, 0, 0);
-        grid-column: 1fr;
-        display: grid;
-        border: 2px solid black;
-    }
-    .contenido{
-        grid-column: 2;
-        grid-row: 2/4;
-        background: rgb(255, 187, 0);
-    }
-    .banner1{
-        grid-column: 3;
-        grid-row: 2;
-        background: rgb(0, 255, 191);
-        border: 2px solid black;
-    }
-    .banner2{
-        grid-column: 2/4;
-        grid-row: 3;
-        background: rgb(238, 0, 255);
-        border: 2px solid black;
-    }
-    .pie{
-        grid-column: 1/5;
-        grid-row: 4;
-        background: rgb(238, 0, 255);
-        border: 2px solid black;
-    }
-    .enlace{
-        background: rgb(238, 0, 255);
-        border: 2px solid black;
-    }
-    .banner2{
-        background: rgb(238, 0, 255);
-       }
+    grid-template-columns: 1fr repeat(2,2fr);
+    grid-template-rows: 15% 35% 35% 15%;
+    grid-gap:0px
+}
+
+.header{
+    background: mediumpurple;
+    grid-column: 1/5;
+    grid-row: 1;
+    border:2px solid black;
+}
+
+.barra{
+    background: #152229;
+    grid-column: 1;
+    grid-row: 2/4;
+    border:2px solid black;
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
+.contenido{
+    background: pink;
+    grid-column: 2;
+    grid-row: 2/4;
+}
+
+.banner1{
+    background: turquoise;
+    grid-column: 3;
+    grid-row: 2;
+    border: 2px solid black;
+}
+
+.banner2{
+    background: turquoise;
+    grid-column: 3;
+    grid-row: 3;
+    border: 2px solid black;
+}
+
+.pie{
+    background: green;
+    grid-column: 1/5;
+    grid-row: 4;
+    border: 2px solid black;
+}
+
+.enlace{
+    background: lightseagreen;
+    border: 2px solid black;
+}
+
+.banner{
+    background: turquoise;
+}
